# soulseek-rs

./: .gitignore  .gp.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  mine2.txt  org.txt  reade.md  state.json  test.md  todo.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
fixtures/: payloads.txt
soulseek-rs/: Cargo.toml  README.md
soulseek-rs-lib/: Cargo.toml  README.md
soulseek-rs-lib/src/: client.rs  dispatcher.rs  download_store.rs  error.rs  lib.rs  types.rs
soulseek-rs-lib/src/actor/: mod.rs  peer_actor.rs  peer_registry.rs  server_actor.rs
soulseek-rs-lib/src/client/: connection.rs  downloads.rs  mod.rs  operations.rs  rooms.rs  search.rs  uploads.rs
soulseek-rs-lib/src/message/: handlers.rs  message_reader.rs  mod.rs
soulseek-rs-lib/src/message/peer/: file_search_response.rs  get_share_file_list.rs  mod.rs  peer_init.rs  place_in_queue_response.rs  queue_upload.rs  shared_file_list.rs  transfer_request.rs  transfer_response.rs  upload_failed.rs
soulseek-rs-lib/src/message/server/: connect_to_peer.rs  excluded_search_phrases.rs  file_search.rs  get_peer_address.rs  join_room.rs  leave_room.rs  login.rs  message_factory.rs  message_user.rs  mod.rs  parent_min_speed.rs  parent_speed_ratio.rs  privileged_users.rs  room_list.rs  say_chatroom.rs  user_joined_room.rs  user_left_room.rs  wish_list_interval.rs
soulseek-rs-lib/src/peer/: download_peer.rs  listen.rs  mod.rs  upload_peer.rs
soulseek-rs-lib/src/shares/: mod.rs
soulseek-rs-lib/src/utils/: lock.rs  logger.rs  md5.rs  mod.rs  path.rs  thread_pool.rs  zlib.rs
soulseek-rs-lib/tests/: e2e.rs
soulseek-rs/src/: cli.rs  config.rs  directories.rs  lib.rs  main.rs
soulseek-rs/src/models/: app_state.rs  browse.rs  download_state.rs  file_display_data.rs  mod.rs  rooms.rs  settings.rs
soulseek-rs/src/persist/: config.rs  mod.rs  paths.rs  secret.rs  snapshot.rs  state.rs
soulseek-rs/src/port_mapping/: mod.rs  nat_pmp.rs
soulseek-rs/src/ui/: download_selector.rs  downloads.rs  file_selector.rs  login.rs  main_tui.rs  mod.rs  multi_download_progress.rs  styles.rs  utils.rs
soulseek-rs/src/ui/main_tui/: browse.rs  downloads.rs  input.rs  mod.rs  render.rs  rooms.rs  search.rs  settings.rs
soulseek-rs/src/ui/panes/: browse_pane.rs  download_info_pane.rs  downloads_pane.rs  mod.rs  results_pane.rs  rooms_pane.rs  searches_pane.rs
soulseek-rs/tests/: persist_e2e.rs
src/: client.rs  dispatcher.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
src/actor/: listener_actor.rs  mod.rs  peer_actor.rs  peer_registry.rs  server_actor.rs
src/message/: factory.rs  handlers.rs  message.rs  message_reader.rs  mod.rs  reader.rs
src/message/handlers/: connect_to_peer.rs  excluded_search_phrases.rs  file_search.rs  handlers.rs  login.rs  message_user.rs  mod.rs  parent_min_speed.rs  parent_speed_ratio.rs  privileged_users.rs  room_list.rs  wish_list_interval.rs
src/message/peer/: file_search_response.rs  folder_contents_request.rs  get_share_file_list.rs  mod.rs  peer_init.rs  place_in_queue_response.rs  queue_failed.rs  transfer_request.rs  transfer_response.rs  upload_failed.rs
src/message/peer/distributed/: branch_level.rs  branch_root.rs  mod.rs  search_request.rs
src/message/server/: cannot_connect_to_peer.rs  connect_to_peer.rs  excluded_search_phrases.rs  file_search.rs  get_peer_address.rs  get_user_stats.rs  get_user_status.rs  login.rs  message_factory.rs  message_user.rs  mod.rs  parent_min_speed.rs  parent_speed_ratio.rs  possible_parents.rs  privileged_users.rs  room_list.rs  wish_list_interval.rs
src/peer/: default_peer.rs  distributed_peer.rs  download_peer.rs  listen.rs  mod.rs  peer.rs
src/share/: matches.rs  mod.rs  shared.rs
src/utils/: logger.rs  md5.rs  mod.rs  thread_pool.rs  zlib.rs
tests/: simple_connect_test.rs  transfer_integration_test.rs
