[package]
name = "soulseek-rs-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for Soulseek protocol implementation in Rust"
keywords = ["soulseek", "p2p", "protocol", "file-sharing"]
categories = ["network-programming"]

[lib]
name = "soulseek_rs"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mio = { version = "1.2.2", default-features = false, features = ["os-poll", "net"] }
