[package]
name = "soulseek-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line client for Soulseek protocol"
keywords = ["soulseek", "p2p", "client", "file-sharing"]
categories = ["command-line-utilities"]

[[bin]]
name = "soulseek-rs"
path = "src/main.rs"

[dependencies]
soulseek-rs-lib = { version = "0.2.2", path = "../soulseek-rs-lib" }

clap = { version = "4.5.51", features = ["derive", "color", "wrap_help", "env"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
